--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
       <version>${appengine.target.version}</version>
       <scope>test</scope>
     </dependency>
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.6.2</version>
+    </dependency>
   </dependencies>
     
   <build>
